# OTA_Gateway

./: CMakeLists.txt  README.md
Doc/: HandlerUML.mermaid
Inc/: Acceptor.hpp  Constant.hpp  Epoller.hpp  GeneralHandler.hpp  Handler.hpp  Reactor.hpp  ReadHandler.hpp  Server.hpp  WriteHandler.hpp
Inc/session/: Session.hpp
Src/: Server.cpp  client_test_local.cpp  client_test_raspberry_pi.cpp  main.cpp
utility/: Delegate.hpp
